--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "npx tailwindcss -i ./src/input.css -o ./dist/style.css --watch"
+		"build": "npx tailwindcss -i ./src/input.css -o ./dist/style.css --watch"
 	},
 	"repository": {
 		"type": "git",
